[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
# tokio + rustls
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
structopt = "0.3"
serde_json = "1.0.91"

[dev-dependencies]
serde_derive = "1.0"